+++++++++++
Python News
+++++++++++

What's New in Python 3.3.6 release candidate 1?
===============================================

*Release date: XX-XXX-XXXX*

Core and Builtins
-----------------

Library
-------

- Issue #21766: Prevent a security hole in CGIHTTPServer by URL unquoting paths
  before checking for a CGI script at that path.

- Fix arbitrary memory access in JSONDecoder.raw_decode with a negative second
  parameter. Bug reported by Guido Vranken.

- Issue #20633: Replace relative import by absolute import.

- Issue #21082: In os.makedirs, do not set the process-wide umask. Note this
  changes behavior of makedirs when exist_ok=True.

- Issue #20875: Prevent possible gzip "'read' is not defined" NameError.
  Patch by Claudiu Popa.

- Issue #11599: When an external command (e.g. compiler) fails, distutils now
  prints out the whole command line (instead of just the command name) if the
  environment variable DISTUTILS_DEBUG is set.

- Issue #4931: distutils should not produce unhelpful "error: None" messages
  anymore.  distutils.util.grok_environment_error is kept but doc-deprecated.

- Issue #20283: RE pattern methods now accept the string keyword parameters
  as documented.  The pattern and source keyword parameters are left as
  deprecated aliases.

- Issue #21323: Fix http.server to again handle scripts in CGI subdirectories,
  broken by the fix for security issue #19435.  Patch by Zach Byrne.

Tests
-----

- Issue #17752: Fix distutils tests when run from the installed location.

- Issue #20946: Correct alignment assumptions of some ctypes tests.

- Issue #20939: Fix test_geturl failure in test_urllibnet due to
  new redirect of http://www.python.org/ to https://www.python.org.


What's New in Python 3.3.5?
===========================

*Release date: 09-Mar-2014*

No changes from release candidate 2.


What's New in Python 3.3.5 release candidate 2?
===============================================

*Release date: 02-Mar-2014*
